fillTestData test user, some refactoring, getAllPhotosByOneUser works now (using $or expression) TODO: gotta get path values to work for PhotosByTwoUsers
